--- a/www/src/PageHome/components/Dropdown/theme.css
+++ b/www/src/PageHome/components/Dropdown/theme.css
@@ -43,6 +43,8 @@
   -webkit-margin-end: 0;
   -webkit-padding-start: 0;
   list-style: none;
+  padding: 0; /* for FireFox */
+  margin: 0;  /* for FireFox */
 }
 
 .suggestion {
